# NTNU_Programming_Homework

./: .gitattributes  .gitignore  README  all.h  hw_pattern.c  makefile_pattern  stack.h
108-endexam/: fin01.c  fin02.c
108-midexam/: .makefile.swp  a.out  makefile  makefile.old  mid02.c  numeral_sys.c  numeral_sys.h
ASM/2019Final/: final01.asm  final02.asm  final03.asm  final04.asm  final05.asm
ASM/2020Final/: final01.asm  final02.asm  final03.asm  final04.asm  final05.asm
Algorithm/HW1/: p1.cpp  p2.cpp  p3-segTree.cpp  p3.cpp  p4.cpp
Algorithm/HW2/: p1.cpp  p2.cpp  p3.cpp  p4.cpp
Algorithm/HW3/: p1.cpp  p2.cpp  (+2 more)
Computer_Architetures/: HW1.md
Computer_Graphic/hw4/: Cargo.toml  index.html  package-lock.json  package.json  webpack.config.js
Computer_Graphic/hw4/src/: lib.rs  shape.rs
Computer_Graphic/lab2/: Cargo.toml  package-lock.json
Computer_Graphic/lab2/src/: lib.rs
Computer_Graphic/lab3/: Cargo.toml  index.html  package-lock.json
Computer_Graphic/lab3/src/: lib.rs
Concept_of_Programming_Language/: hw7.docx
Data_Structure_Practice/: stack.c
Final/: fin02  fin03  final02.c
Final_Exam_Preparation/: bmp.c
Image_Process/: note.org
Information_Security/hasher/: CMakeLists.txt  main.cpp
NTU_DSA/: ac_automation.c
NTU_NASA/: Practice1.md
Operating_System/: HW2  HW2.md
Predictive_Learning/hw1/: Cargo.toml
Predictive_Learning/hw1/src/: knn.rs  linear.rs  main.rs
Predictive_Learning/hw1/src/linear/: lin.rs  tri.rs
Predictive_Learning/hw1/tools/: generator.py
Sort_Practice/: bobble_sort  bobble_sort.c  insertion_sort  insertion_sort.c  merge_sort.c  qsort  sort_pattern.c
System_Programming/: HW1  HW6.c
Verilog/: note.org
Wireless_Communication/: hw3.org  mid_eq.org  note.org
data_structure/: #linking_list.c#  linking_list  linking_list.c  stack
ds/: Homework2.md
ds/Homework6/: CMakeLists.txt
ds/Homework6/src/: Card.cpp  Card.h  LinkedList.cpp  LinkedList.h  UI.h  main.cpp  ui.cpp
hw01-01/: README  hw0101  hw0101.c  hw0102  hw0102.c  hw0103  hw0103.c  hw0104.docx  hw0105  hw0105.c  hw0105.docx  hw0106.docx  makefile
hw01-02/: hw0201  hw0201.c  hw0202  hw0202.c  hw0203  hw0203.c  hw0204  hw0204.c  hw0205  hw0205.c  hw0206  makefile  test.c
hw01-03/: .~lock.hw0306.docx#  a.out  hw0301.c  hw0302.c  hw0303.c  hw0304.c  hw0305.c  makefile
hw01-04/: BullsAndCows.c  README  eqresis.c  hanoi.c  hw04.h  hw0401  hw0401.c  hw0402  hw0402-2.c  hw0402.c  hw0403.c  hw0404  hw0404.c  hw0405  hw0405.odt  hw0407.odt  makefile  taylor.c
hw01-05/: .test2.h.swo  README  determinant.c  hw05.h  hw0501  hw0501.c  hw0502  hw0502.c  hw0503  hw0503.c  hw0504  hw0504.c  hw0505  hw0505.c  hw0506.docx  makefile  minesweeper.c  poly.c  poly.c.bak  regression.c  sorting.c  test.h  test2.h  ~$hw0506.docx
hw01-06/: 1q  README.md  hw06.docx  hw06.h  hw0602.c  hw0603.c  hw0604.c  hw0605.c  hw0606-1.c  hw0606-2.c  makefile  projection.c  rotation.c  simpleeditor.c  sorting.c  test.h
hw02-01/: HW1_Thinking_Pattern.md  hw0101.c  hw0102.c  hw0103.c  hw0104.c  hw0105.c  hw0106.md  makefile  mystring.c  mystring.h  strlib.c
hw02-02/: bignum.c  bignum.h  hw0201.c  hw0202.c  hw0203.c  hw0204.c  hw0205.c  makefile  mixed.c
hw02-03/: README.md  all.h  bitMani.h  bmp.c  gui.c  gui.h  hexcmp  hw0301  hw0302.c  hw0303  hw0303.c  hw0304.c  hw0304.md  hw0306.c  lrc.c  makefile  phantom.of.the.opera.lrc  read_Structure.c  san5pk_editor.c  san5pk_editor.h  terminal.c  terminal.h
hw02-04/: hw0401.c  hw0402.c  hw0403.c  input.txt  linux_header.h  makefile  myprintf.c  myprintf.h  output.txt  test  zipreader.c  zipreader.h
hw02-05/: all.h  hw0501.c  hw0502  hw0502.c  hw0503.c  linux_header.h  makefile
sort/: maxh_sort  maxh_sort.c  qsort.c
(+405 files in other folders)
