[package]
name = "hw1"
version = "0.1.0"
edition = "2021"

[dependencies]
knn = "0.1.3"
csv = "1.3.0"
linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.15.6"
linfa-datasets = "0.7.0"
argmin = {version =  "0.10.0", features = ["rayon"] }
rand = "0.9.0-alpha.2"
argmin-math = {version = "0.4.0", features = ["ndarray_latest", "nalgebra_latest"]}